fixing extra space in main img - by Cerón

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -53,7 +53,7 @@ nav ul {
 
 .container {
   width: 1440px;
-  margin: 0 auto;
+  margin: -3.5% auto;
   padding: 0;
 }
 
